--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 </p>
         </div>
     </div>
-    <img id="bluecrystal" src="../unit-4-game/assets/images/bluecrystal.jpg" style="width: 10%" class="rounded"
-        alt="bluecrystal">
-    <img id="redcrystal" src="../unit-4-game/assets/images/redcrystal.jpg" style="width: 10%" class="rounded"
-        alt="redcrystal">
-    <img id="greencrystal" src="../unit-4-game/assets/images/greencrystal.jpg" style="width: 10%" class="rounded"
-        alt="greencrystal">
-    <img id="pinkcrystal" src="../unit-4-game/assets/images/pinkcrystal.jpg" style="width: 10%" class="rounded"
-        alt="pinkcrystal">
+    <img id="bluecrystal" class="crystal" src="../unit-4-game/assets/images/bluecrystal.jpg" style="width: 10%"
+        class="rounded" alt="bluecrystal">
+    <img id="redcrystal" class="crystal" src="../unit-4-game/assets/images/redcrystal.jpg" style="width: 10%"
+        class="rounded" alt="redcrystal">
+    <img id="greencrystal" class="crystal" src="../unit-4-game/assets/images/greencrystal.jpg" style="width: 10%"
+        class="rounded" alt="greencrystal">
+    <img id="pinkcrystal" class="crystal" src="../unit-4-game/assets/images/pinkcrystal.jpg" style="width: 10%"
+        class="rounded" alt="pinkcrystal">
     <div style="background: rgb(48, 166, 182);width: 25%;" class="card">
         <div class="card-body">
             <p>Running total:<br>
